--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,11 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "~4.16.1",
+    "google-auth-library": "^8.8.0",
+    "googleapis": "^118.0.0",
     "http": "0.0.1-security",
+    "jsonwebtoken": "^9.0.0",
+    "node": "^20.2.0",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
     "puppeteer": "^20.1.2"
