--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,6 +12,7 @@
       "moduleResolution": "node",
       "resolveJsonModule": true,
       "isolatedModules": true,
+      "baseUrl": "./",
       "noEmit": true,
       "jsx": "react",
       "allowImportingTsExtensions": true
