--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,9 +12,9 @@
       "moduleResolution": "node",
       "resolveJsonModule": true,
       "isolatedModules": true,
+      "baseUrl": "./",
       "noEmit": true,
       "jsx": "react"
-    },
-    "include": ["src"]
+    }
   }
   
