--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "~4.16.1",
+    "gapi-script": "^1.2.0",
     "google-auth-library": "^8.8.0",
     "googleapis": "^118.0.0",
     "http": "0.0.1-security",
@@ -18,7 +20,9 @@
     "node": "^20.2.0",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
-    "puppeteer": "^20.1.2"
+    "passport": "^0.6.0",
+    "puppeteer": "^20.1.2",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
