--- a/package.json
+++ b/package.json
@@ -1,25 +1,38 @@
 {
   "name": "fill_cont",
   "version": "1.0.0",
-  "description": "// const promises = [           //   new Promise((resolve) => {           //     browser = puppeteer.launch();           //     browser.then((browserInstance) => {           //       resolve(browserInstance);           //     });           //   }),                       //   new Promise((resolve) => {           //     browser.then((browserInstance) => {           //       const page = browserInstance.newPage();           //       page.goto(url || url_path).then(() => {           //         resolve(page);           //       });           //     });           //   })           // ];",
+  "description": "Water App",
   "main": "index.js",
   "dependencies": {
     "@prisma/client": "^4.14.0",
+    "axios": "^1.4.0",
     "concurrently": "^8.0.1",
     "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1",
     "express-graphql": "^0.12.0",
     "fs": "^0.0.1-security",
+    "gapi-script": "^1.2.0",
     "graphql": "^16.6.0",
+    "http-proxy-middleware": "^2.0.6",
+    "path": "^0.12.7",
     "prisma": "^4.14.0",
     "process": "^0.11.10",
     "puppeteer": "^20.2.0",
-    "typescript": "^5.0.4"
+    "react-google-login": "^5.2.2",
+    "sass": "^1.62.1",
+    "typescript": "^5.0.4",
+    "webpack": "^5.88.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
   "scripts": {
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
     "server": "nodemon --quiet server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run start\" \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
