--- a/package.json
+++ b/package.json
@@ -4,35 +4,36 @@
   "description": "Water App",
   "main": "index.js",
   "dependencies": {
-    "@prisma/client": "^4.14.0",
+    "@prisma/client": "^4.16.2",
+    "@puppeteer/browsers": "^1.4.3",
+    "assert": "^2.0.0",
     "axios": "^1.4.0",
-    "concurrently": "^8.0.1",
-    "dotenv": "^16.0.3",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^8.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
     "express-graphql": "^0.12.0",
-    "fs": "^0.0.1-security",
     "gapi-script": "^1.2.0",
-    "graphql": "^16.6.0",
-    "http-proxy-middleware": "^2.0.6",
-    "path": "^0.12.7",
-    "prisma": "^4.14.0",
-    "process": "^0.11.10",
-    "puppeteer": "^20.2.0",
+    "graphql": "^16.7.1",
+    "prisma": "^4.16.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
-    "sass": "^1.62.1",
-    "typescript": "^5.0.4",
-    "webpack": "^5.88.1"
+    "react-redux": "^8.1.1",
+    "sass": "^1.63.6",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "parcel": "^2.9.3"
+  },
+  "resolutions": {
+    "path": "browserify:path"
   },
   "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production",
     "server": "nodemon --quiet server",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run start\" \"npm run server\" \"npm run client\""
+    "client": "parcel client/public/index.html",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
