--- a/package.json
+++ b/package.json
@@ -4,35 +4,35 @@
   "description": "Water App",
   "main": "index.js",
   "dependencies": {
-    "@prisma/client": "^4.16.2",
-    "@puppeteer/browsers": "^1.4.3",
-    "assert": "^2.0.0",
+    "@prisma/client": "^4.14.0",
     "axios": "^1.4.0",
-    "bcryptjs": "^2.4.3",
-    "concurrently": "^8.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "concurrently": "^8.0.1",
+    "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
     "express-graphql": "^0.12.0",
+    "fs": "^0.0.1-security",
     "gapi-script": "^1.2.0",
-    "graphql": "^16.7.1",
-    "prisma": "^4.16.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "graphql": "^16.6.0",
+    "http-proxy-middleware": "^2.0.6",
+    "os-browserify": "^0.3.0",
+    "path": "^0.12.7",
+    "prisma": "^4.14.0",
+    "process": "^0.11.10",
+    "puppeteer": "^20.2.0",
     "react-google-login": "^5.2.2",
-    "react-redux": "^8.1.1",
-    "sass": "^1.63.6",
-    "typescript": "^5.1.6"
+    "sass": "^1.62.1",
+    "stream-browserify": "^3.0.0",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "parcel": "^2.9.3"
-  },
-  "resolutions": {
-    "path": "browserify:path"
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   },
   "scripts": {
     "server": "nodemon --quiet server",
-    "client": "parcel client/public/index.html",
+    "client": "npm start --prefix client",
+    "build": "npm run build --prefix client",
+    "start": "serve -s client/build",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
