--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fill_cont",
+  "name": "waterapp",
   "version": "1.0.0",
   "description": "Water App",
   "main": "index.js",
@@ -8,25 +8,18 @@
     "axios": "^1.4.0",
     "concurrently": "^8.0.1",
     "dotenv": "^16.0.3",
-    "dotenv-webpack": "^8.0.1",
     "express-graphql": "^0.12.0",
     "fs": "^0.0.1-security",
     "gapi-script": "^1.2.0",
     "graphql": "^16.6.0",
     "http-proxy-middleware": "^2.0.6",
-    "os-browserify": "^0.3.0",
     "path": "^0.12.7",
     "prisma": "^4.14.0",
     "process": "^0.11.10",
     "puppeteer": "^20.2.0",
     "react-google-login": "^5.2.2",
     "sass": "^1.62.1",
-    "stream-browserify": "^3.0.0",
     "typescript": "^5.0.4"
-  },
-  "devDependencies": {
-    "file-loader": "^6.2.0",
-    "url-loader": "^4.1.1"
   },
   "scripts": {
     "server": "nodemon --quiet server",
@@ -45,5 +38,9 @@
   "bugs": {
     "url": "https://github.com/frankcollins3/react_express_node_template/issues"
   },
-  "homepage": "https://github.com/frankcollins3/react_express_node_template#readme"
+  "homepage": "https://github.com/frankcollins3/react_express_node_template#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.22",
+    "react-scripts": "^5.0.1"
+  }
 }
