--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@prisma/client": "^4.14.0",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^8.0.1",
     "dotenv": "^16.0.3",
     "express-graphql": "^0.12.0",
@@ -17,6 +18,7 @@
     "prisma": "^4.14.0",
     "process": "^0.11.10",
     "puppeteer": "^20.2.0",
+    "react": "^18.2.0",
     "react-google-login": "^5.2.2",
     "sass": "^1.62.1",
     "typescript": "^5.0.4"
