--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express-graphql": "^0.12.0",
     "fs": "^0.0.1-security",
