--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phpokedex",
+  "name": "waterapp",
   "version": "0.1.0",
   "proxy": "http://localhost:5000",
   "private": true,
@@ -8,18 +8,31 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
+    "express-graphql": "^0.12.0",
     "fs": "0.0.1-security",
+    "gapi-script": "^1.2.0",
+    "graphql": "^16.6.0",
+    "jquery": "^3.7.0",
+    "moment-timezone": "^0.5.43",
     "prisma": "^4.13.0",
     "puppeteer": "^20.2.0",
+    "puppeteer-core": "^20.7.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.1",
     "redux": "^4.2.1",
     "sass": "^1.62.1",
-    "web-vitals": "^2.1.4"
+    "url": "^0.11.1",
+    "web-vitals": "^2.1.4",
+    "y18n": "^5.0.8",
+    "yargs-parser": "^21.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
     "@types/react": "^18.2.6",
     "concurrently": "^8.0.1",
     "typescript": "^5.0.4"
