--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "waterapp",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,13 @@
     "client": "cd client && npm start"
   },
   "dependencies": {
+    "assert": "^2.0.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
+    "fs": "0.0.1-security",
     "gapi-script": "^1.2.0",
     "google-auth-library": "^8.8.0",
     "googleapis": "^118.0.0",
@@ -20,9 +23,14 @@
     "node": "^20.2.0",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
+    "os": "^0.1.2",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.7.0",
     "puppeteer": "^20.1.2",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "readline": "^1.3.0",
+    "url": "^0.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
