--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "process": "^0.11.10",
     "puppeteer": "^20.2.0",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "sass": "^1.62.1",
     "typescript": "^5.0.4"
@@ -27,9 +28,9 @@
   "scripts": {
     "server": "nodemon --quiet server",
     "client": "npm start --prefix client",
-    "build": "npm run build --prefix client",
-    "start": "serve -s client/build",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "build": "npm run build --prefix client && prisma generate",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
